refactor : DB 에 s3 버킷 디렉토리만 저장 ( 상세 URL 은 prefix 를 더해 반환 )